remove gbc in JVM